--- a/waybar/style.css
+++ b/waybar/style.css
@@ -50,12 +50,12 @@ button:hover {
 
 /* you can set a style on hover for any module like this */
 #pulseaudio:hover {
-    background-color: #a37800;
 }
 
 #workspaces {
     background-color: rgba(174, 216, 230, 0.3);
-    border-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     padding: 0 10px;
 }
 
@@ -65,11 +65,13 @@ button:hover {
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+}
+
+#workspaces button.active {
+    border-bottom: 1px solid #000;
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
     box-shadow: inset 0 -3px #ffffff;
 }
 
